WIAPASCAL CHANGE LOG
======================

2024/10/
        23 Added PaperAlign and SetParams method; 
	   Updated SetPaperSize; 
	   Added PaperAlign and changed Orentation Icons in SettingsForm.
        21 Added Rotation and PaperLandscape;
           Renamed WiaImageFormat to WiaImageFormatGUID and Added ImageFormat Descriptions;
           Renamed all TWia types to TWIA Uppercase;
           Added PaperLandscape in SettingsForm;
        19 Added TWIAItemTypes and relative Convert Function;
	   Changed Download method for ProgrammableDataSource is alway 0;
	   Added WiaItemTypeTwainCompatibility in WiaDef.
           Added EnumAll property in WIAManager; 
           Added EnumerateDevices in WIAManager.GetDevice;
           Moved creation of IWiaDevMgr2 inside EnumerateDevices;
	   Select Form Show No Wia Error inside FillList
        18 Re EnumerateItems in TWIADevice.SetSelectedItemIndex;
	   Commented BitDepth part so we use only DataType;
	   SettingsForm with all Items (must be tested)
        17 Added DataType and BitDepth in WIADevice and SettingForm; 
	   Changed TWiaImageFormat names;
        16 Added  ImageFormat functions and Methods;
	   Renamed GetPaperSizeSet to GetPaperSize;
	   Deleted and merged some propTypes into GetProperty/GetPropertyAttributes;
	   Changed some Exception Handling 
        15 Changed Return type of TWiaDevice.GetResolutions to TWIAPropertyFlags; 
	   Added Brightness, Contrast and GetParamsCapabilities in TWiaDevice
	   Added WIACopyCurrent/DefaultValues;
	   Updated SettingsForm;
	   Cleaned up the code a bit
        14 functions in WIA_PaperSizes unit to Calculate Values;
           GetPaperSizeSet use Calculated Values; 
           SetPaperSize use Calculated Pixel Values (WIA_IPS_XEXTENT, etc);
           GetResolutions for List of Valid Values;
           Get/Set Resolution;
           Updated SettingForm and Demo 
        11 First Settings Form code; Added PaperSizes (that does not works)