@@ -1,9 +1,9 @@
 object FormWIADemo: TFormWIADemo
-  Left = 234
+  Left = 260
   Height = 576
-  Top = 98
+  Top = 102
   Width = 769
-  Caption = 'FormWIADemo'
+  Caption = 'WIA Demo'
   ClientHeight = 576
   ClientWidth = 769
   LCLVersion = '3.99.0.0'
@@ -11,8 +11,8 @@ object FormWIADemo: TFormWIADemo
   OnDestroy = FormDestroy
   object ImageHolder: TImage
     Left = 0
-    Height = 536
-    Top = 40
+    Height = 528
+    Top = 48
     Width = 769
     Align = alClient
     Proportional = True
@@ -20,17 +20,17 @@ object FormWIADemo: TFormWIADemo
   end
   object Panel1: TPanel
     Left = 0
-    Height = 40
+    Height = 48
     Top = 0
     Width = 769
     Align = alTop
-    ClientHeight = 40
+    ClientHeight = 48
     ClientWidth = 769
     TabOrder = 0
     object btAcquire: TButton
-      Left = 200
+      Left = 224
       Height = 32
-      Top = 0
+      Top = 8
       Width = 75
       Caption = 'Acquire'
       Enabled = False
@@ -47,10 +47,10 @@ object FormWIADemo: TFormWIADemo
       OnClick = btSelectClick
     end
     object progressBar: TProgressBar
-      Left = 288
-      Height = 20
-      Top = 5
-      Width = 350
+      Left = 304
+      Height = 24
+      Top = 16
+      Width = 300
       TabOrder = 2
     end
     object cbTest: TCheckBox
@@ -69,12 +69,20 @@ object FormWIADemo: TFormWIADemo
       TabOrder = 4
     end
     object cbEnumLocal: TCheckBox
-      Left = 100
+      Left = 96
       Height = 19
-      Top = 3
-      Width = 80
-      Caption = 'Enum Local'
+      Top = 8
+      Width = 104
+      Caption = 'Only Connected'
+      Checked = True
+      State = cbChecked
       TabOrder = 5
+    end
+    object lbProgress: TLabel
+      Left = 304
+      Height = 1
+      Top = 0
+      Width = 1
     end
   end
 end
